# PickemAPI

./: .env.example  .gitignore  Dockerfile  Readme.md  alembic.ini  automigrate.sh  dependencies.py  main.py  pyproject.toml
.github/workflows/: docker-deploy.yml
alembic/: env.py
alembic/versions/: 38a17e3f2bef_.py  6ed6f657e2de_2023_12_13_add_comments_for_picks.py  c4a570ec9009_2023_12_11_test_4.py  c4ccf87eeb26_2023_12_11_.py
db/: alchemy.py  crud.py  models.py  picks_crud.py  pyd_models.py  schemas.py  series.py  sql_models.py
db/crud/: games.py  picks.py  series.py  users.py
pickem/: dependencies.py  main.py
pickem/alembic/: env.py
pickem/alembic/versions/: 14f1243e001a_2024_02_04_add_session_tables.py  1be52c36b1ce_2024_02_05_add_backrefs.py  22611f22019e_2023_12_11_.py  2c85cbc811fa_2024_02_01_add_marquee_games.py  32e615b0568d_create_tables.py  38eeb9488c6d_2023_12_11_home_away_games.py  3a8154d35a68_.py  494bbca7206f_2023_12_12_change_start_time_to_.py  4eecfe1ccadb_2023_12_18_add_series_numbers.py  50b511c1f92e_2023_12_11_home_away_games_test2.py  63f204419699_2024_01_27_user_preferences_schema.py  6b13cf211689_2024_01_27_modify_user_preference_table_.py  8591270cf681_2024_01_27_modify_user_preference_table_.py  87ef3a06a341_2024_02_29_.py  (+8 more)
pickem/db/: alchemy.py  models.py  schemas.py
pickem/lib/: sessions.py  status.py  users.py
pickem/routers/: games.py  picks.py  userpicks.py  users.py
routers/: game.py  games.py  picks.py  users.py
scripts/: calc_series.py  create_marquee_games.py  load_games.py  load_teams.py  setup_db.py
(+6 files in other folders)
