[tool.poetry]
name = "pickemapi"
version = "0.1.0"
description = ""
authors = ["specificlanguage <specificlanguage@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^2.0.23"
fastapi = "^0.104.1"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.0"
httpx = "^0.25.2"
fastapi-cache2 = "^0.2.1"
jwt = "^1.3.1"
python-dotenv = "^1.0.1"
redis = "^5.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
